--- a/letsmow/css/main.css
+++ b/letsmow/css/main.css
@@ -352,9 +352,9 @@ tbody tr:hover{
 }
 
 
-@media only screen and (max-width: 220px) {
-    .sitename, .show, .hide {
-        font-size: 14px;
-    }
-}
+/*@media only screen and (max-width: 220px) {*/
+    /*.sitename, .show, .hide {*/
+        /*font-size: 14px;*/
+    /*}*/
+/*}*/
 
